<resources>
    <string name="app_name">Cafe Order</string>
    <string name="cafe_name">Julius Meinl</string>
    <string name="logo_description">Логотип кафе</string>
    <string name="string_welcome">Добро пожаловать!</string>
    <string name="hint_name">Введите ваше имя:</string>
    <string name="hint_password">Введите ваш пароль:</string>
    <string name="string_button_create_order">СОЗДАТЬ ЗАКАЗ</string>
    <string name="warning_fill_fields">Все поля должны быть заполнены</string>
    <string name="TextViewHello">Привет, %s! Что будете заказывать?</string>
    <string name="button_tea">Чай</string>
    <string name="button_coffee">Кофе</string>
    <string name="TextViewEditions">Что добавить в ваш %s?</string>
    <string name="checkboxSugar">Сахар</string>
    <string name="checkboxMilk">Молоко</string>
    <string name="checkboxLemon">Лимон</string>
    <string name="TextViewChooseDrink">Выберете вид напитка</string>
    <string name="ButtonSendOrder">Кнопка отправить заказ</string>
    <string name="default_name">Клиент</string>
    <string name="default_password">пароль</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="need_additions">[[]\Необходимые добавки: \</string>
    <string-array name="Options_Of_Coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>

    <string-array name="Options_of_tea">
        <item>Чёрный</item>
        <item>Зелёный</item>
        <item>Красный</item>
    </string-array>


</resources>