<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:textSize="56sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:typeface="sans"
        android:text="@string/cafe_name" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:contentDescription="@string/logo_description"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:text="@string/string_welcome" />

    <EditText
        android:id="@+id/editTextTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:textColorHint="@color/LightRed"
        android:textColor="@color/LightRed"
        android:hint="@string/hint_name"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textColorHint="@color/LightRed"
        android:textColor="@color/LightRed"
        android:hint="@string/hint_password"/>

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/string_button_create_order"
        android:background="@color/red"
        android:textColor="@color/white"
        android:onClick="onClickCreateOrder"/>

</LinearLayout>